<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="bottom|right"
            android:text=""
            android:textColor="@color/white"
            android:textSize="48sp"
            tools:ignore="NestedWeights,RtlHardcoded" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:gravity="top|right"
            android:text=""
            android:textColor="@color/white"
            android:textSize="36sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <Button
                style="@style/customButton"
                android:onClick="clearOnClick"
                android:text="@string/clear"
                android:textColor="@color/cyan"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="deleteOnClick"
                android:text="@string/delete"
                android:textColor="@color/cyan"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="bracketOnClick"
                android:text="@string/bracket"
                android:textColor="@color/cyan"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="divisionOnClick"
                android:text="@string/division"
                android:textColor="@color/cyan"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Button
                style="@style/customButton"
                android:onClick="sevenOnClick"
                android:text="@string/seven"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="eightOnClick"
                android:text="@string/eight"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="nineOnClick"
                android:text="@string/nine"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="timesOnClick"
                android:text="@string/multiplication"
                android:textColor="@color/cyan"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Button
                style="@style/customButton"
                android:onClick="fourOnClick"
                android:text="@string/four"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="fiveOnClick"
                android:text="@string/five"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="sixOnClick"
                android:text="@string/six"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="minusOnClick"
                android:text="@string/subtraction"
                android:textColor="@color/cyan"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Button
                style="@style/customButton"
                android:onClick="oneOnClick"
                android:text="@string/one"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="twoOnClick"
                android:text="@string/two"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="threeOnClick"
                android:text="@string/three"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="plusOnClick"
                android:text="@string/addition"
                android:textColor="@color/cyan"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Button
                style="@style/customButton"
                android:onClick="percentOnClick"
                android:text="@string/modulus"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="zeroOnClick"
                android:text="@string/zero"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="dotOnClick"
                android:text="@string/dot"
                android:textColor="@color/white"
                tools:ignore="UsingOnClickInXml" />

            <Button
                style="@style/customButton"
                android:onClick="equalsOnClick"
                android:text="@string/equation"
                android:textColor="@color/cyan"
                tools:ignore="UsingOnClickInXml" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>